--- a/front/moduli/statistica/base/base.html
+++ b/front/moduli/statistica/base/base.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Elementi di statistica</title>
+		<title>Elementi di base di statistica</title>
 		<link rel="shortcut icon" href="../../../favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="../../../assets/css/bootstrap.css" />
 		<link rel="stylesheet" href="../../../assets/css/home-made.css" />
