--- a/front/moduli/statistica/intro/intro.html
+++ b/front/moduli/statistica/intro/intro.html
@@ -7,9 +7,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Introduzione alla statistica</title>
 		<link rel="shortcut icon" href="../../../favicon.ico" />
-		<link rel="stylesheet" href="../../../bootstrap-4.4.1-dist/css/bootstrap.css" />
+		<link rel="stylesheet" href="../../../assets/css/bootstrap.css" />
 		<link rel="stylesheet" href="../../../assets/css/home-made.css" />
-		<script src="../../../jQuery/jquery.min.js"></script>
+		<script src="../../../assets/js/jquery.min.js"></script>
 		<script src="../../../assets/js/bootstrap.js" lang="--js"></script>
 		<style>
 			body {
