--- a/front/moduli/qi/intro/intro.html
+++ b/front/moduli/qi/intro/intro.html
@@ -12,13 +12,13 @@
 		<script src="../../../assets/js/bootstrap.js" lang="--js"></script>
 		<style>
 			body {
-                background-image: url(".jpg");
+                background-image: url("imintro.jpg");
                 background-repeat: no-repeat;
 				background-attachment: fixed;
 				background-size: cover;
             }
             .bg-blur {
-				background-color: rgba(185, 179, 174, 0.527);
+				background-color: rgba(221, 231, 233, 0.911);
 			}
 		</style>
 		<script type="text/javascript" src="introtest.js"></script>
@@ -90,16 +90,16 @@
             id="numeri"
             >
 			<strong>PROBLEM SOLVING</strong>
-			
+			</a>
 			<div class="bg-blur" style="display: none;" id="snumeri">
 				<br />
 				<strong>FASI della soluzione di problemi:</strong>
-				Stato iniziale = modo in cui vengono descritte le condizioni di partenza <br>
-				Stato-obiettivo = modo in cui viene illustrato l'obiettivo da raggiungere <br>
-				Operatori = le operazioni per passare da uno stato all'altro <br>
-				Stati intermedi del problema = gli stadi che si ottengono applicando un operatore a <br>
+				<div class="bg-blur container xl text-monospace">Stato iniziale = modo in cui vengono descritte le condizioni di partenza <br>
+				1.Stato-obiettivo = modo in cui viene illustrato l'obiettivo da raggiungere <br>
+				2.Operatori = le operazioni per passare da uno stato all'altro <br>
+				3.Stati intermedi del problema = gli stadi che si ottengono applicando un operatore a <br>
 				uno stato in vista del raggiungimento dell'obiettivo <br>
-				Spazio del problema = modello mentale di questi quattri aspetti del problema &nbsp <br>
+				4.Spazio del problema = modello mentale di questi quattri aspetti del problema &nbsp <br>
 				<br />
 				</div>
             </a>
@@ -151,9 +151,10 @@
 				</style> </p> <br /><br />
 
 			</head>
-		
 			
 		</div>
 		<script src="intro.js"></script>
 	</body>
 </html>
+
+
