--- a/front/moduli/qi/quiz_qi/quiz_qi.html
+++ b/front/moduli/qi/quiz_qi/quiz_qi.html
@@ -13,11 +13,12 @@
 	<script src="../../../assets/js/bootstrap.js" lang="--js"></script>
 	<style>
 		body {
-			background-image: url("");
+			background-image: url("imintro.jpg");
 			background-repeat: no-repeat;
 			background-attachment: fixed;
 			background-size: cover;
 		}
+		
 	</style>
 </head>
 <script type="text/javascript" src="quiz.js"></script>
@@ -133,12 +134,20 @@
 	</style>
 	<br></br><br></br>
 
-	<div id="ilquiz" class="container-lg">
-		<font face="Times New Roman" size="5">
+	<div
+	id=ilquiz
+	class="container text-monospace"
+	style="
+		background-color: rgba(192, 226, 218, 0.925);
+		padding-top: 2em;
+		padding-bottom: 2em;
+	"
+	>
+		
 
 			<div id="quiz1">
 				<h4>1.Qual è il numero intruso fra quelli della seguente serie?
-					9 - 7 - 8 - 6 - 7 - 5 - 6 - 3
+					9-7-8-6-7-5-6-3
 				</h4>
 				<label class="container" id="1.1">4
 					<input type="radio" name="radio1" />
@@ -288,11 +297,11 @@
 						background: rgba(30, 147, 243, 0.5);
 						transition-duration: 3s;
 					">
-					Premi su invio per conoscere il tuo punteggio
+					Premi invio per conoscere il tuo punteggio
 				</div>
 			</div>
 	</div>
-	</font>
+	
 	<br></br><br></br>
 </body>
 
