intro qi correction

--- a/front/moduli/qi/intro/intro.html
+++ b/front/moduli/qi/intro/intro.html
@@ -73,10 +73,11 @@
 				</ul>
 			</div>
 		</nav>
-        <br /><br /><br /><br />
+        
 		
 		
-        <div class="bg-blur container xl text-monospace"> <br />
+		<div class="bg-blur container xl text-monospace"> <br />\
+			<br /><br /><br /><br />
 		<h2>Pensiero e Ragionamento</h2>
 		
         <div>Con il Pensiero si intende il processo di rappresentazione mentale di
