--- a/front/moduli/statistica/intro/introtest.html
+++ b/front/moduli/statistica/intro/introtest.html
@@ -152,7 +152,7 @@
 										ebrei?
 									</div>
 									<div>
-										<input type="text" name="libro" id="libro" size="30"></input>
+										<input type="text" name="libro" id="libro" size="30" />
 									</div>
 								</div>
 							</div>
@@ -160,22 +160,48 @@
 								<div class="text-xl-center" style="padding: 1em;">
 									Cosa è l'istat?
 									<br />
-									<label class="radiobutton"
+									<label class="radiobutton" for="p1p"
 										>Organizza le lotterie
-										<input type="radio" class="" name="istat" value="1" />
+										<input
+											class="radio"
+											type="radio"
+											id="p1p"
+											name="istat"
+											value="1"
+										/>
 									</label>
-									<label class="radiobutton"
+									<label class="radiobutton" for="p2p"
 										>publico italiano per l'economia e la finanza
-										<input type="radio" class="" name="istat" value="2" />
+										<input
+											class="radio"
+											type="radio"
+											id="p2p"
+											name="istat"
+											value="2"
+										/>
 									</label>
-									<label class="radiobutton"
+									<label class="radiobutton" for="p3p"
 										>Istituto nazionale di statistica
-										<input type="radio" class="" name="istat" value="3" />
+										<input
+											class="radio"
+											type="radio"
+											id="p3p"
+											class=""
+											name="istat"
+											value="3"
+										/>
 									</label>
 
-									<label class="radiobutton"
+									<label class="radiobutton" for="p4p"
 										>Servizi Segreti
-										<input type="radio" class="" name="istat" value="4" />
+										<input
+											class="radio"
+											type="radio"
+											id="p4p"
+											class=""
+											name="istat"
+											value="4"
+										/>
 									</label>
 								</div>
 							</div>
