quasi tutti i test di Python

--- a/front/moduli/programmazione/inizio/fondamenti.html
+++ b/front/moduli/programmazione/inizio/fondamenti.html
@@ -109,7 +109,7 @@
                 <div class="carousel-item active text-center p-4">
                      <p>La programmazione informatica, si basa sulla capacità del computer a svolgere compiti diversi da quelli per cui è stato progettato.
                         Infatti Un computer è una macchina programmabile. Non si limita a eseguire quello che il progettista ha scritto nei circuiti elettrici.
-                        L'utente può "istruire" ( programmare ) il computer a svolgere qualsiasi calcolo. Programmare significa scrivere un programma informatico da far eseguire al computer.
+                        L'utente (developer) può "istruire" ( programmare ) il computer a svolgere qualsiasi calcolo. Programmare significa scrivere un programma informatico da far eseguire al computer.
                         </p>
 						
 					</div>
@@ -155,7 +155,7 @@
                         </div>
                         <div class="carousel-item text-center p-4">
 						
-                            <p>Esistono principalmente cinque metodi di programmazion.
+                            <p>Esistono principalmente cinque metodi di programmazione.
                                 <ul>
                                  <li>La programmazione procedurale consiste nella stesura di un elenco sequenziale di operazioni.
                                       Il computer esegue le istruzioni dalla prima all'ultima. Per ogni operazione va scritta un'istruzione.</li>
