--- a/front/moduli/programmazione/parte_1/test_2.html
+++ b/front/moduli/programmazione/parte_1/test_2.html
@@ -16,7 +16,7 @@
 		<style>
             
 			body {
-				background-image: url(../immagini/progtest.jpg);
+				background-image: url(../immagini/prog4.jpg);
 				background-repeat: no-repeat;
 				background-attachment: fixed;
 				background-size: cover;
@@ -24,7 +24,7 @@
 
     h1 {
       text-align: center;
-      color: red;
+      color: orangered;
 	}
 
 </style>
@@ -148,7 +148,20 @@
 						<div class="tab-content" id="nav-tabContent">
 							<div class="tab-pane fade show active" id="primad" role="tabpanel">
 								<div style="padding: 1em;">
-									Quanti sono i principali metodi di programmazione?
+                                    Qual'è l'outpunt del seguente codice?
+                                </div>
+                                <div>
+                                    >>>prova="7"
+                                    </div>
+                                    <div>
+                                        >>>prova= prova +"0"
+                                        </div>
+                                        <div>
+                                            >>>var=int(prova)+3
+                                            
+                                            <div>
+                                                >>>print(float(var))
+                                                </div>
 									<br />
 									<div>
 									<input
@@ -184,7 +197,7 @@
 							</div>
 								<div class="tab-pane fade show active" id="vad" role="tabpanel">
 									<div style="padding: 1em;">
-										Un programma, in quanti modi può essere trasformato in linguaggio macchina?
+										Qual'è l'outpunt del seguente frammento di codice?
 										<br />
 										<div>
 										<input
