--- a/front/snake/snake.html
+++ b/front/snake/snake.html
@@ -90,15 +90,16 @@ uso a invece che span per rendere il contenuto interattivo  -->
 					"
 				>
 					<div class="col">
-						Snake è un videogioco presente in molti telefonini, in particolare quelli
-						prodotti dalla Nokia. <br />
-						sue origini risalgono agli anni settanta, con il videogioco arcade Blockade;
-						da allora è stato prodotto in numerose piattaforme e varianti, fino a
-						ritrovare nuova fama negli anni novanta grazie ai cellulari.
-						<br />
-						lo scopo è quello di mangiare più frutti rossi ovvero mele possibili, fino a
-						riempire l'intero schermo
-
+						<div style="padding: 0.5em;">
+							Snake è un videogioco presente in molti telefonini, in particolare
+							quelli prodotti dalla Nokia. <br />
+							sue origini risalgono agli anni settanta, con il videogioco arcade
+							Blockade; da allora è stato prodotto in numerose piattaforme e varianti,
+							fino a ritrovare nuova fama negli anni novanta grazie ai cellulari.
+							<br />
+							lo scopo è quello di mangiare più frutti rossi ovvero mele possibili,
+							fino a riempire l'intero schermo
+						</div>
 						<p
 							class="row text-primary center"
 							style="padding: 1em;"
@@ -282,7 +283,7 @@ uso a invece che span per rendere il contenuto interattivo  -->
 			function classifica() {
 				$.post("snake.php", { richiesta: "nomi" }, function (data, status) {
 					if (data == "-1") {
-						vue.nomi = [{ nick: "devi", punteggio: "loggarti" }];
+						vue.nomi = [{ nick: "Devi", punteggio: "Loggarti" }];
 					} else {
 						varie = JSON.parse(data);
 						varie = varie;
