continuo moduli py

--- a/front/moduli/programmazione/inizio/test_fond.html
+++ b/front/moduli/programmazione/inizio/test_fond.html
@@ -239,6 +239,7 @@
 											value="coder"
 										/>Coder.
 									</div>
+									<div>
 										<input
 											type="radio"
 											class="col-1"
@@ -246,6 +247,7 @@
 											value="developer"
 										/>Developer.
 										<div>
+										</div>
 										<input
 											type="radio"
 											class="col-1"
