--- a/front/moduli/programmazione/parte_1/test_2.html
+++ b/front/moduli/programmazione/parte_1/test_2.html
@@ -197,38 +197,38 @@
 							</div>
 								<div class="tab-pane fade show active" id="vad" role="tabpanel">
 									<div style="padding: 1em;">
-										Qual'è l'outpunt del seguente frammento di codice?
+										Quale tra questi non è salvato come float?
 										<br />
 										<div>
 										<input
 											type="radio"
 											class="col-1"
 											name="intro1"
-											value="nessuno"
+											value="sette"
 											onclick="increase()"
-										/>Nessuno.
+										/>7.
 									</div>
 									<div>
 										<input
 											type="radio"
 											class="col-1"
 											name="intro1"
-											value="tre"
-										/>Tre:Interpretazione,Compilazione,Traduzione.
+											value="duequarti"
+										/>2/4
 									</div>
 										<input
 											type="radio"
 											class="col-1"
 											name="intro1"
-											value="due"
-										/>Due:Interpretazione,Compilazione.
+											value="otto"
+										/>8.0
 										<div>
 										<input
 											type="radio"
 											class="col-1"
 											name="intro1"
-											value="two"
-										/>Due:Interpretazione,Traduzione.
+											value="pigreco"
+										/>3.4
 										</div>
 									</div>
 								</div>
