--- a/front/snake/snake.html
+++ b/front/snake/snake.html
@@ -95,7 +95,7 @@ uso a invece che span per rendere il contenuto interattivo  -->
 						<div style="padding: 0.5em;">
 							Snake è un videogioco presente in molti telefonini, in particolare
 							quelli prodotti dalla Nokia. <br />
-							sue origini risalgono agli anni settanta, con il videogioco arcade
+							Le origini risalgono agli anni settanta, con il videogioco arcade
 							Blockade; da allora è stato prodotto in numerose piattaforme e varianti,
 							fino a ritrovare nuova fama negli anni novanta grazie ai cellulari.
 							<br />
