manca design e finito tutto

--- a/front/moduli/qi/intro/intro.html
+++ b/front/moduli/qi/intro/intro.html
@@ -74,10 +74,10 @@
 			</div>
 		</nav>
         
+		<br /><br /><br /><br />
 		
-		
-		<div class="bg-blur container xl text-monospace"> <br />\
-			<br /><br /><br /><br />
+		<div class="bg-blur container xl text-monospace"> <br />
+			<br />
 		<h2>Pensiero e Ragionamento</h2>
 		
         <div>Con il Pensiero si intende il processo di rappresentazione mentale di
@@ -95,13 +95,13 @@
 			<div class="bg-blur" style="display: none;" id="snumeri">
 				<br />
 				<strong>FASI della soluzione di problemi:</strong>
-				<div class="bg-blur container xl text-monospace">Stato iniziale = modo in cui vengono descritte le condizioni di partenza <br>
-				1.Stato-obiettivo = modo in cui viene illustrato l'obiettivo da raggiungere <br>
-				2.Operatori = le operazioni per passare da uno stato all'altro <br>
-				3.Stati intermedi del problema = gli stadi che si ottengono applicando un operatore a <br>
+				<div class="bg-blur container xl text-monospace"></div>Stato iniziale=modo in cui vengono descritte le condizioni di partenza <br>
+				1.Stato-obiettivo=modo in cui viene illustrato l'obiettivo da raggiungere <br>
+				2.Operatori=le operazioni per passare da uno stato all'altro <br>
+				3.Stati intermedi del problema=gli stadi che si ottengono applicando un operatore a <br>
 				uno stato in vista del raggiungimento dell'obiettivo <br>
-				4.Spazio del problema = modello mentale di questi quattri aspetti del problema &nbsp <br>
-				<br />
+				4.Spazio del problema=modello mentale di questi quattri aspetti del problema &nbsp <br>
+				<br /> <img src="pb.gif"  width="350" height="200" >
 				</div>
             </a>
 		</div>
