--- a/front/moduli/qi/intro/intro2.html
+++ b/front/moduli/qi/intro/intro2.html
@@ -12,7 +12,7 @@
 		<script src="../../../assets/js/bootstrap.js" lang="--js"></script>
 		<style>
 			body {
-                background-image: url(".jpg");
+                background-image: url("puzzle1.gif");
                 background-repeat: no-repeat;
 				background-attachment: fixed;
 				background-size: cover;
