--- a/front/moduli/qi/quiz_qi/domanda0.html
+++ b/front/moduli/qi/quiz_qi/domanda0.html
@@ -1,5 +1,6 @@
 <!-- @format -->
-
+<br>
+<div class="bg-blur-dark"> 
 <div id="domanda1.1">
 	<div class="domanda1" style="padding-left: 60px;">&nbsp;</div>
 	<div class="domanda1" style="padding-left: 60px;">&nbsp;</div>
@@ -7,8 +8,8 @@
 		<strong><span class="quiz_num">1.</span
 			><span class="quiz"
 				>Quale dei cinque animali &egrave; meno simile agli altri quattro?</span
-			></strong
-		>
+			></strong 
+		> <br></br></div>
 	</div>
 	<div class="domanda1" style="padding-left: 60px;" >
 		<input
@@ -55,8 +56,10 @@
 			value="Tigre"
 		/><label for="domanda1_5">Tigre</label>
 	</div>
+	<br>
 </div>
 
+</div>
 
  
 
