--- a/front/moduli/qi/quiz_qi/domanda1.html
+++ b/front/moduli/qi/quiz_qi/domanda1.html
@@ -1,4 +1,6 @@
 <!-- @format -->
+<br>
+<div class="bg-blur-dark"> 
 
 <div id="domanda1.2">
 	<div class="domanda2" style="padding-left: 60px;">&nbsp;</div>
@@ -9,7 +11,7 @@
 			><span class="quiz"
 				>Se riordini le lettere "LRGILO", ottieni il nome di un/una:</span
 			></strong
-		>
+		> <br></br> </div>
 	</div>
 	<div class="domanda2" style="padding-left: 60px;">
 		<input
@@ -56,5 +58,6 @@
 			value="Un animale"
 		/><label for="domanda2_5">Un animale</label>
 	</div>
+	<br>
 </div>
-
+</div>
