--- a/front/moduli/qi/quiz_qi/domanda2.html
+++ b/front/moduli/qi/quiz_qi/domanda2.html
@@ -1,4 +1,6 @@
 <!-- @format -->
+<br>
+<div class="bg-blur-dark"> 
 
 <div id="domanda1.3">
 	<div class="domanda3" style="padding-left: 60px;">&nbsp;</div>
@@ -6,10 +8,9 @@
 	<div class="domanda3" style="padding-left: 60px;">
 		<strong><span class="quiz_num">3.</span></strong
 		><span class="mlw_qmn_question"
-			><strong>Quale dei cinque è meno simile agli altri quattro?</strong><img/>
-		
+			><strong>Quale dei cinque è meno simile agli altri quattro?</strong>
 		</span>
-	</div>
+	</div> <br> </div>
 	<div class="domanda3" style="padding-left: 60px;">
 		<span class="mlw_qmn_question"
 			><input
@@ -57,4 +58,6 @@
 			value="E"
 		/><label for="domanda3_5">Piombo</label>
 	</div>
+	<br>
+</div>
 </div>
