--- a/front/moduli/qi/quiz_qi/quiz_qi.html
+++ b/front/moduli/qi/quiz_qi/quiz_qi.html
@@ -13,7 +13,7 @@
 	<script src="../../../assets/js/bootstrap.js" lang="--js"></script>
 	<style>
 		body {
-			background-image: url("imintro.jpg");
+			background-image: url("scuola.jpg");
 			background-repeat: no-repeat;
 			background-attachment: fixed;
 			background-size: cover;
