--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<meta http-equiv="refresh" content="15;URL=/front/index.php">
+		<title>Pagina di Redirect</title>
 	</head>
 	<body>
-		<a href="/front/index.php"> Portami al sito</a>
+	<p>
+    Tra 15 secondi avverrà un redirect automatico alla nuova pagina.<br>
+    Se non vuoi aspettare <a href="/front/index.php">clicca qui</a>.
+    </p>
+	
 	</body>
 </html>
+
+
