--- a/front/moduli/qi/quiz_qi/crocetteAjax.html
+++ b/front/moduli/qi/quiz_qi/crocetteAjax.html
@@ -110,7 +110,7 @@
                 </div>
             </div> </div>
             <div>
-                <p id="valutazione"></p>
+                <p id="punteggio"></p>
             </div>
         </div>
         <script>
@@ -149,10 +149,18 @@
 
 			function invia() {
 				$.post("crocette.php", { arrayrisposte }, function (data, status) {
-					$("#valutazione").text(
-						"Hai risposto correttamente a " + data + " su 3 domande"
-					);
-				});
+					if (data == -1) {
+			$("#punteggio").text(
+				"Mi dispiace ma non risulti loggato e non potrai partecipare al quiz"
+			);
+		} else if (data <= 1) {
+			$("#punteggio").css("background-color", "rgba(240, 20, 30, 0.5)");
+			$("#punteggio").text("Hai risposto in modo corretto a " + data + " domande su 3");
+		} else {
+			$("#punteggio").css("background-color", "rgba(20, 230, 30, 0.5)");
+			$("#punteggio").text("Hai risposto in modo corretto a " + data + " domande su 3");
+		}
+	});
 			}
 		</script>
 		<script src="crocetteAjax.js"></script>
