--- a/front/moduli/programmazione/parte_2/test_3.html
+++ b/front/moduli/programmazione/parte_2/test_3.html
@@ -222,31 +222,31 @@
                                     <input
                                         type="radio"
                                         class="col-1"
-                                        name="prog32"
-                                        value="coder"
+                                        name="prog33"
+                                        value="one"
                                     />1.
                                 </div>
                                     <div>
                                         <input
                                             type="radio"
                                             class="col-1"
-                                            name="prog32"
-                                            value="coder"
+                                            name="prog33"
+                                            value="noone"
                                         />Nessuno.
                                     </div>
                                     <div>
                                         <input
                                             type="radio"
                                             class="col-1"
-                                            name="prog32"
-                                            value="developer"
+                                            name="prog33"
+                                            value="infinity"
                                         />Infiniti.
                                         <div></div>
                                         <input
                                             type="radio"
                                             class="col-1"
-                                            name="prog32"
-                                            value="nope"
+                                            name="prog33"
+                                            value="twelve"
                                         />12.
                                     </div>
                                 </div>
