--- a/front/moduli/qi/quiz_qi/domanda0.html
+++ b/front/moduli/qi/quiz_qi/domanda0.html
@@ -13,7 +13,7 @@
 	</div>
 	<div class="domanda1" style="padding-left: 60px;" >
 		<input
-			id="domanda_1"
+			id="domanda1_1"
 			class="qmn_quiz_radio"
 			name="domanda1"
 			type="radio"
