--- a/front/moduli/qi/intro/intro.html
+++ b/front/moduli/qi/intro/intro.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>LOGICA</title>
+		<title>Logica</title>
 		<link rel="shortcut icon" href="../../../favicon.ico" />
 		<link rel="stylesheet" href="../../../assets/css/bootstrap.css" />
 		<link rel="stylesheet" href="../../../assets/css/home-made.css" />
@@ -68,11 +68,12 @@
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 						<a class="dropdown-item" href="/front/profilo/profile.php">Impostazioni</a>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Globa</a>
+						<a class="dropdown-item" href="/front/index.php#footer">Suggerimenti</a>
 					</div>
 				</ul>
 			</div>
 		</nav>
+
         
 		<br /><br /><br /><br />
 		
