--- a/front/moduli/qi/quiz_qi/enigma2.html
+++ b/front/moduli/qi/quiz_qi/enigma2.html
@@ -63,13 +63,14 @@
 						Profilo
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="/front/profilo.php">Impostazioni</a>
+						<a class="dropdown-item" href="/front/profilo/profile.php">Impostazioni</a>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Globa</a>
+						<a class="dropdown-item" href="/front/index.php#footer">Suggerimenti</a>
 					</div>
 				</ul>
 			</div>
 		</nav>
+
 		<br /><br /><br /><br />
 		<div
 			class="container text-monospace text-white bg-blur-dark"
