--- a/front/moduli/statistica/base/base.html
+++ b/front/moduli/statistica/base/base.html
@@ -81,7 +81,12 @@
 			<h2>La statistica tutti i giorni</h2>
 			<div>
 				Quando pensiamo alla statistica pensiamo ad una
-				<span class="bg-blur more-info" id="scienza">scienza,</span>
+				<a
+					href="https://it.wikipedia.org/wiki/Scienza"
+					class="bg-blur more-info"
+					id="scienza"
+					>scienza,</a
+				>
 				<div class="bg-blur" style="display: none;" id="sscienza">
 					<hr />
 					Per scienza si intende un sistema di conoscenze ottenute attraverso un'attività
