adv-crazy correction

--- a/front/moduli/statistica/adv/adv.html
+++ b/front/moduli/statistica/adv/adv.html
@@ -103,12 +103,14 @@
 			</div>
 		</nav>
 
-		<div class="bg-blur container-lg text-monospace text">
-			<br /><br /><br />
-			<div class="text-light">
+		<div class="bg-blur container-lg text-monospace" style="padding: 3em 1em 3em 1em;">
+			<div class="text-light center" style="padding: 2em; font-size: large;">
 				In questo capitolo cercheremo di leggere e interpretare diversi grafici, i nomi
-				specifici di questi, come vanno letti e le informazioni che contengono, muoviti con
-				il mouse sul riquadro che ti interessa
+				specifici di questi, come vanno letti e le informazioni che contengono.
+				<br />
+				<br />
+				Puoi spostarti con il mouse su un riquadro per far apparire le informazioni che lo
+				riguardano!
 			</div>
 			<div id="app"></div>
 			<a class="" href="advtest.html"
