carousel box shadow

--- a/front/learnMap/materie/python.html
+++ b/front/learnMap/materie/python.html
@@ -60,6 +60,10 @@
 			</div>
 			<a
 				class="carousel-control-prev"
+				style="
+					box-shadow: 5.5em -0px 20px rgba(0, 4, 24, 0.164) inset;
+					border-radius: 1em 0em 0em 1em;
+				"
 				href="#carouselExampleCaptions"
 				role="button"
 				data-slide="prev"
@@ -69,6 +73,10 @@
 			</a>
 			<a
 				class="carousel-control-next"
+				style="
+					box-shadow: -5.5em -0px 20px rgba(0, 4, 24, 0.164) inset;
+					border-radius: 0em 1em 1em 0em;
+				"
 				href="#carouselExampleCaptions"
 				role="button"
 				data-slide="next"
