--- a/front/moduli/qi/quiz_qi/quiz_qi.html
+++ b/front/moduli/qi/quiz_qi/quiz_qi.html
@@ -307,8 +307,11 @@
 						transition-duration: 3s;
 					">
 					Premi invio per conoscere il tuo punteggio
-				</div>
+				</div> 
+				
 			</div>
+			<br><br>
+			<div class="accordion center" style="padding:10px;border-radius: 7px; background-color:rgba(20, 50, 100, 0.4);"> <a class="center" href="../../../learnMap/learnMap.php"><strong> Premi qui per tornare alla learnMap </strong> <a> </div>
 	</div>
 	
 	<br></br><br></br>
